--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <link href="%PUBLIC_URL%/logo.png" rel="icon" />
+    <link href="/logo.png" rel="icon" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta content="#000000" name="theme-color" />
     <meta
             content="Web site created using create-react-app"
             name="description"
     />
-    <link href="%PUBLIC_URL%/manifest.json" rel="manifest" />
-    <link href="%PUBLIC_URL%/logo.png" rel="apple-touch-icon" />
+    <link href="/manifest.json" rel="manifest" />
+    <link href="/logo.png" rel="apple-touch-icon" />
     <base href="/" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -29,5 +29,7 @@
 </head>
 <body>
 <div id="root"></div>
+<script type="module" src="/src/index.jsx"></script>
 </body>
 </html>
+ 
