--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <link href="/logo.png" rel="icon" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <meta content="#000000" name="theme-color" />
+    <meta charset="utf-8"/>
+    <link href="/logo.png" rel="icon"/>
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
+    <meta content="#000000" name="theme-color"/>
     <meta
             content="Web site created using create-react-app"
             name="description"
     />
-    <link href="/manifest.json" rel="manifest" />
-    <link href="/logo.png" rel="apple-touch-icon" />
-    <base href="/" />
+    <link href="/manifest.json" rel="manifest"/>
+    <link href="/logo.png" rel="apple-touch-icon"/>
+    <base href="/"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -28,7 +28,7 @@
     <title>Airport Weather</title>
 </head>
 <body>
-<div id="root"></div>
-<script type="module" src="/src/index.jsx"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/index.tsx"></script>
 </body>
 </html>
