added Markers and and style the Markers

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
     <link href="/manifest.json" rel="manifest"/>
     <link href="/logo.png" rel="apple-touch-icon"/>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
     <base href="/"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
