--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta
             content="Discover comprehensive airport information, real-time Vatsim traffic, and extreme weather conditions worldwide with our powerful aviation tool. Designed for Vatsim pilots and virtual aviation enthusiasts, our site provides accurate airport weather and METAR decoding, detailed airport data, and live Vatsim traffic and controller positions on an interactive map. Stay informed with our Extreme Weather section, highlighting the most challenging weather conditions for flight operations globally. Elevate your virtual flying experience with up-to-date information and seamless navigation."
             name="description"
+            data-rh="true"
     />
 
     <!-- Open Graph Meta Tags for Discord, Facebook, etc. -->
