--- a/index.html
+++ b/index.html
@@ -6,25 +6,27 @@
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="#000000" name="theme-color"/>
     <meta
-            content="Discover comprehensive airport information, real-time Vatsim traffic, and extreme weather conditions worldwide with our powerful aviation tool. Designed for Vatsim pilots and virtual aviation enthusiasts, our site provides accurate airport weather and METAR decoding, detailed airport data, and live Vatsim traffic and controller positions on an interactive map. Stay informed with our Extreme Weather section, highlighting the most challenging weather conditions for flight operations globally. Elevate your virtual flying experience with up-to-date information and seamless navigation."
-            name="description"
-            data-rh="true"
+        content="Track live VATSIM traffic and controllers on an interactive map. Explore global METARs, airport data, VATSIM events, and extreme weather."
+        name="description"
+        data-rh="true"
     />
 
     <!-- Open Graph Meta Tags for Discord, Facebook, etc. -->
     <meta property="og:title" content="Airport Weather"/>
-    <meta property="og:description"
-          content="Discover comprehensive airport information, real-time Vatsim traffic, and extreme weather conditions worldwide with our powerful aviation tool. Designed for Vatsim pilots and virtual aviation enthusiasts, our site provides accurate airport weather and METAR decoding, detailed airport data, and live Vatsim traffic and controller positions on an interactive map. Stay informed with our Extreme Weather section, highlighting the most challenging weather conditions for flight operations globally. Elevate your virtual flying experience with up-to-date information and seamless navigation."/>
-    <meta property="og:image" content="https://stage.airportweather.org/logo.png"/>
-    <meta property="og:url" content="https://stage.airportweather.org.com"/>
+    <meta
+        property="og:description"
+        content="Track live VATSIM traffic and controllers on an interactive map. Explore global METARs, airport data, VATSIM events, and extreme weather."
+    />
+    <meta property="og:url" content="https://airportweather.org.com"/>
     <meta property="og:type" content="website"/>
 
     <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:card" content="summary"/>
     <meta name="twitter:title" content="Airport Weather"/>
-    <meta name="twitter:description"
-          content="Discover comprehensive airport information, real-time Vatsim traffic, and extreme weather conditions worldwide with our powerful aviation tool. Designed for Vatsim pilots and virtual aviation enthusiasts, our site provides accurate airport weather and METAR decoding, detailed airport data, and live Vatsim traffic and controller positions on an interactive map. Stay informed with our Extreme Weather section, highlighting the most challenging weather conditions for flight operations globally. Elevate your virtual flying experience with up-to-date information and seamless navigation."/>
-    <meta name="twitter:image" content="https://stage.airportweather.org/logo.png"/>
+    <meta 
+        name="twitter:description"
+        content="Track live VATSIM traffic and controllers on an interactive map. Explore global METARs, airport data, VATSIM events, and extreme weather."
+    />
 
     <link href="/manifest.json" rel="manifest"/>
     <link href="/logo.png" rel="apple-touch-icon"/>
