--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         />
 
         <link href="/manifest.json" rel="manifest" />
-        <link href="/logo.png" rel="apple-touch-icon" />
+        <link href="/logo192.png" rel="apple-touch-icon" />
         <base href="/" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
